--- a/mlhospitality/index.html
+++ b/mlhospitality/index.html
@@ -3,14 +3,14 @@
 <head>
     <link href="/mlhospitality/styles.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <title>DLInsurance</title>
+    <title>Hospitality Bookings</title>
 </head>
 
 <body>
     <header id="dashboard">
-        <h1><b>HEALTH</b> INSURANCE</h1>
+        <h1><b>HOSPITALITY</b> BOOKINGS</h1>
         <hr>
-        Health Insurance Dashboard
+        Hospitality Bookings Dashboard
         <hr>
         <iframe title="hospitality_bookings - Page 1" width="910" height="572"
             src="https://app.powerbi.com/view?r=eyJrIjoiOTFlZDNiZGYtNzJjNy00Y2Y1LWE2ODUtZWRmMDhjMTU0ZWRlIiwidCI6IjcyMmVhMGJlLTNlMWMtNGIxMS1hZDZmLTk0MDFkNjg1NmUyNCJ9"
@@ -27,18 +27,9 @@
                 <h2>NOTEBOOK</h2>
                 <p>
                     <i class="fab fa-github" aria-hidden="true"></i>
-                    <a href="https://github.com/lyoh001/DLInsurance/blob/main/notebook/notebook.ipynb">Jupyter
+                    <a href="https://github.com/lyoh001/AzureFunctions/blob/main/mlhospitality/notebook/notebook.ipynb">Jupyter
                         Notebook</a>
                 </p>
-            </section>
-            <section>
-                <h2>DATASET</h2>
-                <p>
-                    <i class="fab fa-kaggle" aria-hidden="true"></i>
-                    <a href="https://www.kaggle.com/datasets/sureshmecad/health-insurance-lead-prediction">Health
-                        Insurance Lead Prediction</a>
-                </p>
-                <p></p>
             </section>
             <section>
                 <h2>SKILLS</h2>
@@ -67,15 +58,15 @@
         <article id="mainRight">
             <section>
                 <h2>ABOUT</h2>
-                <p>Your Client FinMan is a financial services company that provides various financial services like
-                    loan, investment funds, insurance etc. to its customers. FinMan wishes to cross-sell health
-                    insurance to the existing customers who may or may not hold insurance policies with the company. The
-                    company recommend health insurance to it's customers based on their profile once these customers
-                    land on the website. Customers might browse the recommended health insurance policy and consequently
-                    fill up a form to apply. When these customers fill-up the form, their Response towards the policy is
-                    considered positive and they are classified as a lead.
-                    Once these leads are acquired, the sales advisors approach them to convert and thus the company can
-                    sell proposed health insurance to these leads in a more efficient manner.
+                <p>Atliq Grands owns multiple five-star hotels across India. They have been in the hospitality industry
+                    for the past 20 years. Due to strategic moves from other competitors and ineffective decision-making
+                    in management, Atliq Grands are losing its market share and revenue in the luxury/business hotels
+                    category. As a strategic move, the managing director of Atliq Grands wanted to incorporate “Business
+                    and Data Intelligence” in order to regain their market share and revenue. However, they do not have
+                    an in-house data analytics team to provide them with these insights.
+
+                    Their revenue management team had decided to hire a 3rd party service provider to provide them
+                    insights from their historical data.
                 </p>
             </section>
             <section>
