--- a/mlmobileuurka/index.html
+++ b/mlmobileuurka/index.html
@@ -73,7 +73,7 @@
                     Somalia has the 6th highest MMR worldwide, with 1 in 18 dying from pregnancy-related complications.
                     Unfortunately, most of these complications could have been easily cured, avoided, or managed.
 
-                    The technology nowadays allows for remote tracking of women’s health status, which is vital since
+                    The technology nowadays allows for remote tracking of women's health status, which is vital since
                     70% of the population lives outside urban areas with low or no access to healthcare facilities. The
                     urgency for the technology is high because the average age in Somalia is 17 years, and the typical
                     childbearing age is between 15 and 45, implying that there will be an exponential increase in
@@ -106,7 +106,7 @@
                     <button onclick="predict();">predict</button>
                 </ol>
                 <p>Prediction: <b id="prediction">...</b></p>
-                <p>(*It may take upto 15 seconds to compute the prediction.)</p>
+                <p>(*It may take upto 10 seconds to compute the prediction.)</p>
                 <script>
                     function predict() {
                         var feature1 = document.getElementById("feature1").value;
