--- a/mlmobileuurka/index.html
+++ b/mlmobileuurka/index.html
@@ -27,7 +27,8 @@
                 <h2>NOTEBOOK</h2>
                 <p>
                     <i class="fab fa-github" aria-hidden="true"></i>
-                    <a href="https://github.com/lyoh001/DLMobileUurka/blob/main/notebook/notebook.ipynb">Risk Level
+                    <a href="https://github.com/lyoh001/AzureFunctions/blob/main/mlmobileuurka/notebook/notebook.ipynb">Risk
+                        Level
                         Prediction Notebook</a>
                 </p>
             </section>
