--- a/mlsupplychain/index.html
+++ b/mlsupplychain/index.html
@@ -27,13 +27,17 @@
                 <h2>NOTEBOOK</h2>
                 <p>
                     <i class="fab fa-github" aria-hidden="true"></i>
-                    <a href="https://github.com/lyoh001/EDASupplyChain/blob/main/notebook/notebook_otd.ipynb">On Time
+                    <a
+                        href="https://github.com/lyoh001/AzureFunctions/blob/main/mlsupplychain/notebook/notebook_otd.ipynb">On
+                        Time
                         Delievery Prediction
                         Notebook</a>
                 </p>
                 <p>
                     <i class="fab fa-github" aria-hidden="true"></i>
-                    <a href="https://github.com/lyoh001/EDASupplyChain/blob/main/notebook/notebook_ifd.ipynb">In Full
+                    <a
+                        href="https://github.com/lyoh001/AzureFunctions/blob/main/mlsupplychain/notebook/notebook_ifd.ipynb">In
+                        Full
                         Delievery Prediction
                         Notebook</a>
                 </p>
