--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <link href="styles.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <title>Yohan John Lee Resume</title>
+    <title>Resume</title>
 </head>
 
 <body>
     <header id="header">
-        <h1><b>YOHAN </b>JOHN LEE</h1>
+        <h1><b>JOHN </b>YOHAN LEE</h1>
         <hr>
-        TECHNICAL SPECIALIST
+        MACHINE LEARNING | DEVOPS ENGINEER
         <hr>
     </header>
     <main>
@@ -18,6 +18,21 @@
             <section>
                 <h2>SKILLS</h2>
                 <p>Python, Machine Learning, Deep Learning, DevOps, MLOps, AWS, Azure, Power BI, SQL, IaC</p>
+            </section>
+            <section>
+                <h2>EDUCATION</h2>
+                <b>Amazon Web Services (AWS)</b>
+                <p>
+                    AWS Certified Solutions Architect - Associate
+                </p>
+                <b>Microsoft (MCSE)</b>
+                <p>
+                    Cloud Platform and Infrastructure Certification
+                </p>
+                <b>Bachelor of Science (BSc), Computer Science</b>
+                <p>
+                    The University of Auckland
+                </p>
             </section>
             <section>
                 <h2>CONTACT</h2>
@@ -38,72 +53,64 @@
                     <a href="mailto:lyoh001@hotmail.com">lyoh001@hotmail.com</a>
                 </p>
             </section>
-            <section>
-                <h2>EDUCATION</h2>
-                <b>Amazon Web Services (AWS)</b>
-                <p>
-                    AWS Certified Solutions Architect - Associate
-                </p>
-                <p>
-                    2019
-                </p>
-                <b>Microsoft (MCSE)</b>
-                <p>
-                    Cloud Platform and Infrastructure Certification
-                </p>
-                <p>
-                    2018
-                </p>
-                <b>Bachelor of Science (BSc), Computer Science</b>
-                <p>
-                    The University of Auckland
-                </p>
-                <p>
-                    2000-2004
-                </p>
-            </section>
         </article>
         <article id="mainRight">
             <section>
                 <h2>ABOUT</h2>
-                <p>Proven IT Professional with experience of 9+ years in Project Implementation & Operations.
-                    Currently working as a Technical Specialist in Cloud hosting team at Cenitex and actively
-                    contributes in conducting expert business & systems analysis, identifying business improvements &
-                    information systems solutions, coordinating & scheduling projects, developing & monitoring project
-                    plans, and managing the end-to-end delivery of projects.
-                    Possess widespread and progressive experience in the IT industry, focusing on business analysis,
-                    design, development, implementation and migration of large-scale, big budget business transformation
-                    projects.
-                    Impeccable knowledge for initiating applications with Data analysis, Machine Learning, Deep
-                    Learning, Artificial Neural Network and DevOps & Project Implementation.</p>
+                <p>Proven IT Professional with 10+ years of experience in project and operations.
+                    Possess widespread, progressive experience in the IT industry, focusing on business analysis,
+                    design, development, implementation and migration of large-scale business transformation projects.
+                    Impeccable knowledge for initiating applications with Data Analysis, Machine Learning, Deep
+                    Learning, and DevOps.</p>
             </section>
             <section>
                 <h2>WORK EXPERIENCE</h2>
+                <h3><b>MACHINE LEARNING ENGINEER</b></h3>
+                <p>
+                    Omdena | 2022 - Present
+                </p>
+                <ul>
+                    <li>End to end project development covering EDA, Feature engineering, Power BI
+                        Dashboard, Machine Learning & Artificial Neural Network Model building, Model
+                        Deployment, Web App Deployment via CICD pipeline to the cloud. (<a
+                            href="https://orange-water-0538b1c10.2.azurestaticapps.net/mlmobileuurka">project link</a>)
+                    </li>
+                </ul>
+                <h3><b>POWER BI PROJECT CHALLENGE</b></h3>
+                <p>
+                    Codebasics | 2022
+                </p>
+                <ul>
+                    <li>End to end project development covering EDA, Feature engineering, Power BI
+                        Dashboard, Machine Learning & Artificial Neural Network Model building, Model
+                        Deployment, Web App Deployment via CICD pipeline to the cloud. (<a
+                            href="https://orange-water-0538b1c10.2.azurestaticapps.net/mlsupplychain">project link</a>)
+                    </li>
+                </ul>
                 <h3><b>TECHNICAL SPECIALIST</b></h3>
                 <p>
                     Cenitex | 2012 - Present
                 </p>
-                <p>
-                    Resolving various cloud & hosting related queries and projects as shown below.
-                </p>
                 <ul>
-                    <li>Help business to decide in dynamic pricing by identifying business insights and forecasting the
-                        trends for future months using time series analysis using sklearn, pandas and matplotlib saving
-                        over $500k per annum.</li>
-                    <li>ML, DL POC project for building a model using tensorflow and sklearn and deploy it to the cloud
-                        via Azure static web app backed by Azure Function.</li>
-                    <li>Analyse the current cost model for Azure resources by performing EDA with visualization and
-                        model optimization. Total reduction is approx. $15k per annum.</li>
-                    <li>Fully automated Azure monthly billing using Python, Pandas, Seaborn and Azure Functions.
+                    <li>Helped business decide in dynamic pricing by identifying business insights and forecasting the
+                        trends for future months using LSTM time series, Tensorflow, Pandas and Matplotlib saving over
+                        $500k per annum. (<a href="https://github.com/lyoh001/AzureBillForecast">project
+                            link</a>)
                     </li>
-                    <li>Perform a root cause analysis for failing automation using pandas and powerbi dashboard by
-                        querying 4 year worth of log records and then provided a new cloud native solution for business
-                        continuity.</li>
-                    <li>Provide a fully automated resource cleaning workflow across POC subscriptions saving over $150k
-                        worth of cost per annum.</li>
-                    <li>Provide a fully automated realtime resource monitoring, AAD roles, RBAC workflow across over
-                        100+ subscriptions and maintain them with less administrative overhead saving hours of manual
-                        work.</li>
+                    <li>Analysed the current cost model for Azure cloud resources by performing EDA with visualization.
+                        Total reduction approx. $15k per annum. (<a
+                            href="https://github.com/lyoh001/AzureReservedInstance">project
+                            link</a>)
+                    </li>
+                    <li>Performed a root cause analysis for failing automation using Pandas and Power BI and deployed a
+                        new cloud native solution for business continuity. (<a
+                            href="https://github.com/lyoh001/AzureLMS">project
+                            link</a>)
+                    </li>
+                    <li>Convolutional Neural Network image classification model PoC project for identifying Covid19
+                        using TensorFlow and Keras. (<a href="https://github.com/lyoh001/DLCovid19">project
+                            link</a>)
+                    </li>
                 </ul>
             </section>
         </article>
