--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </section>
             <section>
                 <h2>EDUCATION</h2>
-                <b>Amazon Web Services (AWS)</b>
+                <b>Amazon Web Services</b>
                 <p>
                     AWS Certified Solutions Architect - Associate
                 </p>
