--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             </section>
             <section>
                 <h2>EDUCATION</h2>
-                <b>Amazon Web Services</b>
+                <b>Amazon Web Services (AWS)</b>
                 <p>
-                    AWS Certified Solutions Architect - Associate
+                    Certified Solutions Architect - Associate
                 </p>
                 <b>Microsoft (MCSE)</b>
                 <p>
