--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </p>
                 <p>
                     <i class="fa fa-home" aria-hidden="true"></i>
-                    <a href="http://lyoh001.ml">lyoh001.ml</a>
+                    <a href="https://lyoh001.com">lyoh001.com</a>
                 </p>
                 <p>
                     <i class="fa fa-envelope" aria-hidden="true"></i>
@@ -73,7 +73,7 @@
                     <li>End to end project development covering EDA, Feature engineering, Power BI
                         Dashboard, Machine Learning & Artificial Neural Network Model building, Model
                         Deployment, Web App Deployment via CICD pipeline to the cloud. (<a
-                            href="https://orange-water-0538b1c10.2.azurestaticapps.net/mlmobileuurka">project link</a>)
+                            href="https://lyoh001.com/mlmobileuurka">project link</a>)
                     </li>
                 </ul>
                 <h3><b>POWER BI PROJECT CHALLENGE</b></h3>
@@ -84,7 +84,7 @@
                     <li>End to end project development covering EDA, Feature engineering, Power BI
                         Dashboard, Machine Learning & Artificial Neural Network Model building, Model
                         Deployment, Web App Deployment via CICD pipeline to the cloud. (<a
-                            href="https://orange-water-0538b1c10.2.azurestaticapps.net/mlsupplychain">project link</a>)
+                            href="https://lyoh001.com/mlsupplychain">project link</a>)
                     </li>
                 </ul>
                 <h3><b>TECHNICAL SPECIALIST</b></h3>
