--- a/mlmobileuurka/index.html
+++ b/mlmobileuurka/index.html
@@ -56,7 +56,7 @@
                 </p>
                 <p>
                     <i class="fa fa-home" aria-hidden="true"></i>
-                    <a href="http://lyoh001.ml">lyoh001.ml</a>
+                    <a href="https://lyoh001.com">lyoh001.com</a>
                 </p>
                 <p>
                     <i class="fa fa-envelope" aria-hidden="true"></i>
