--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
                     Omdena | 2022 - Present
                 </p>
                 <ul>
-                    <li>End to end project development covering EDA, Feature engineering, Power BI
-                        Dashboard, Machine Learning & Artificial Neural Network Model building, Model
-                        Deployment, Web App Deployment via CICD pipeline to the cloud. (<a
+                    <li>Maternal Mortality Prediction: End to end project development covering EDA,
+                        Feature Engineering, Power BI, Training Machine Learning & Artificial Neural
+                        Network Models, App Deployment via CICD pipeline to the cloud. (<a
                             href="https://lyoh001.com/mlmobileuurka">project link</a>)
                     </li>
                 </ul>
@@ -81,9 +81,9 @@
                     Codebasics | 2022
                 </p>
                 <ul>
-                    <li>End to end project development covering EDA, Feature engineering, Power BI
-                        Dashboard, Machine Learning & Artificial Neural Network Model building, Model
-                        Deployment, Web App Deployment via CICD pipeline to the cloud. (<a
+                    <li>Supply Chain Prediction: End to end project development covering EDA, Feature
+                        Engineering, Power BI, Training Machine Learning & Artificial Neural Network
+                        Models, App Deployment via CICD pipeline to the cloud. (<a
                             href="https://lyoh001.com/mlsupplychain">project link</a>)
                     </li>
                 </ul>
