--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
                     Codebasics | 2022
                 </p>
                 <ul>
+                    <li>Telecom Revenue Prediction: End to end project development covering EDA, Feature
+                        Engineering, Power BI, Training Machine Learning & Artificial Neural Network
+                        Models, App Deployment via CICD pipeline to the cloud. (<a
+                            href="https://lyoh001.com/mltelecom">project link</a>)
+                    </li>
                     <li>Supply Chain Prediction: End to end project development covering EDA, Feature
                         Engineering, Power BI, Training Machine Learning & Artificial Neural Network
                         Models, App Deployment via CICD pipeline to the cloud. (<a
