--- a/mlmobileuurka/index.html
+++ b/mlmobileuurka/index.html
@@ -10,16 +10,11 @@
     <header id="dashboard">
         <h1><b>MOBILE</b> UURKA</h1>
         <hr>
-        Maternal Mortality Dashboard
+        Maternal Mortality Dashboard and AI Risk Prediction
         <hr>
         <iframe title="mobileuurka - Page 1" width="910" height="572"
             src="https://app.powerbi.com/view?r=eyJrIjoiZDIwMzAxNjQtNGNkOC00ZTI1LTkxZTgtMzE2YzVkZDBkODRiIiwidCI6IjcyMmVhMGJlLTNlMWMtNGIxMS1hZDZmLTk0MDFkNjg1NmUyNCJ9"
             frameborder="0" allowFullScreen="true"></iframe>
-    </header>
-    <header id="model">
-        <hr>
-        Maternal Risk Level Prediction
-        <hr>
     </header>
     <main>
         <article id="mainLeft">
