--- a/mltelecom/index.html
+++ b/mltelecom/index.html
@@ -3,23 +3,18 @@
 <head>
     <link href="/mltelecom/styles.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <title>Telecom Market Insights</title>
+    <title>Telecom Market</title>
 </head>
 
 <body>
     <header id="dashboard">
         <h1><b>TELECOM</b> MARKET</h1>
         <hr>
-        Telecom Market Insights Dashboard
+        Telecom Market Insights Dashboard and AI Plan Optimizer
         <hr>
         <iframe title="hospitality_bookings - Page 1" width="910" height="572"
             src="https://app.powerbi.com/view?r=eyJrIjoiOTFlZDNiZGYtNzJjNy00Y2Y1LWE2ODUtZWRmMDhjMTU0ZWRlIiwidCI6IjcyMmVhMGJlLTNlMWMtNGIxMS1hZDZmLTk0MDFkNjg1NmUyNCJ9"
             frameborder="0" allowFullScreen="true"></iframe>
-    </header>
-    <header id="model">
-        <hr>
-        Telecom Market Insights Prediction Model
-        <hr>
     </header>
     <main>
         <article id="mainLeft">
@@ -62,17 +57,16 @@
                     with other telecom providers.
 
                     However, the management noticed a decline in their active users and revenue growth post 5G launch in
-                    May 2022. Atliqo's business director requested their analytics team to provide a comparison report
+                    May 2022. Atliqo's business director requested to provide a comparison report
                     of KPIs between pre and post-periods of the 5G launch. The management is keen to compare the
                     performance between these periods and get insights which would enable them to make informed
-                    decisions to recover their active user rate and other key metrics. They also wonder if they can
-                    optimize their internet plans to get more active users.
+                    decisions to recover their active user rate by optimizing internet plans.
                 </p>
             </section>
             <section>
-                <h2>PREDICTION</h2>
+                <h2>AI PLAN OPTIMIZER</h2>
                 <p>
-                    Please populate the input fields listed below and click predict to continue.
+                    Please populate the input fields listed below to optimize internet plan.
                 </p>
                 <ol>
                     <li>
