--- a/mlsupplychain/index.html
+++ b/mlsupplychain/index.html
@@ -10,16 +10,11 @@
     <header id="dashboard">
         <h1><b>SUPPLY</b> CHAIN</h1>
         <hr>
-        Supply Chain Dashboard
+        Supply Chain Dashboard and AI Delivery Prediction
         <hr>
         <iframe title="supplychain - Page 1" width="910" height="572"
             src="https://app.powerbi.com/view?r=eyJrIjoiY2UzZjZjYmQtNmNmNC00YmMzLTg4YTYtOTViYzU5M2JjMWEzIiwidCI6IjcyMmVhMGJlLTNlMWMtNGIxMS1hZDZmLTk0MDFkNjg1NmUyNCJ9"
             frameborder="0" allowFullScreen="true"></iframe>
-    </header>
-    <header id="model">
-        <hr>
-        Supply Chain Prediction Model
-        <hr>
     </header>
     <main>
         <article id="mainLeft">
