--- a/mltelecom/index_.html
+++ b/mltelecom/index_.html
@@ -55,6 +55,7 @@
                 <h2>PROBLEM</h2>
                 <p>AtliQo is one of the leading telecom providers in India and launched it's 5G plans in May 2022 along
                     with other telecom providers.
+
                     However, the management noticed a decline in their active users and revenue growth post 5G launch in
                     May 2022. Atliqo's business director requested to provide a comparison report
                     of KPIs between pre and post-periods of the 5G launch. The management is keen to compare the
@@ -88,24 +89,10 @@
                             <option value="Raipur">Raipur</option>
                         </select>
                     </li>
-                    <li><input id="feature2" type="month" value="2022-10" min="2022-10" max="2023-12">
+                    <li><input id="feature2" name="feature2" type="month" value="2022-10" min="2022-10" max="2023-12">
                     </li>
-                    <li><input id="feature3" type="number" min="1" max="180" placeholder="Valid Period (1-180) Days">
-                    </li>
-                    <li><label for="feature4">Data Size in Gb (0.1-30)</label></li>
-                    <div class="slider">
-                        <input type="range" min="0.1" max="30" value="15" step="0.1" class="slider" id="feature4">
-                        <p>Data: <span id="feature4_output"></span> Gb</p>
-                    </div>
-                    <script>
-                        var slider = document.getElementById("feature4");
-                        var output = document.getElementById("feature4_output");
-                        output.innerHTML = slider.value;
-
-                        slider.oninput = function () {
-                            output.innerHTML = this.value;
-                        }
-                    </script>
+                    <li><input id="feature3" placeholder="Data Size in Gb (0.1-30)"></li>
+                    <li><input id="feature4" placeholder="Valid Period in Days (1-180)"></li>
                     <button onclick="predict();">predict</button>
                 </ol>
                 <p>Monthly Plan Revenue Prediction: <b id="prediction">...</b></p>
@@ -125,7 +112,7 @@
                                 document.getElementById("prediction").innerHTML = response;
                             }
                         }
-                        http.send(JSON.stringify({ "city_name": [feature1], "time_period": [feature2], "valid_period": [feature3], "data_size": [feature4] }));
+                        http.send(JSON.stringify({ "city_name": [feature1], "time_period": [feature2], "data_size": [feature3], "valid_period": [feature4] }));
                     }
                 </script>
             </section>
